refactor: code refactor